SPHEREON-172 Regenerate SDK with new tags
