# csharp-net45/src/Sphereon.SDK.Blockchain.Easy/Api/ChainApi.cs
@@ -45,7 +45,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>CommittedChainResponse</returns>
-        CommittedChainResponse CreateChainUsingPOST (Chain chain);
+        CommittedChainResponse CreateChain (Chain chain);
 
         /// <summary>
         /// Create a new chain
@@ -56,7 +56,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>ApiResponse of CommittedChainResponse</returns>
-        ApiResponse<CommittedChainResponse> CreateChainUsingPOSTWithHttpInfo (Chain chain);
+        ApiResponse<CommittedChainResponse> CreateChainWithHttpInfo (Chain chain);
         /// <summary>
         /// Pre determine the Id of a chain request without anchoring it in the blockchain
         /// </summary>
@@ -89,7 +89,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>Task of CommittedChainResponse</returns>
-        System.Threading.Tasks.Task<CommittedChainResponse> CreateChainUsingPOSTAsync (Chain chain);
+        System.Threading.Tasks.Task<CommittedChainResponse> CreateChainAsync (Chain chain);
 
         /// <summary>
         /// Create a new chain
@@ -100,7 +100,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>Task of ApiResponse (CommittedChainResponse)</returns>
-        System.Threading.Tasks.Task<ApiResponse<CommittedChainResponse>> CreateChainUsingPOSTAsyncWithHttpInfo (Chain chain);
+        System.Threading.Tasks.Task<ApiResponse<CommittedChainResponse>> CreateChainAsyncWithHttpInfo (Chain chain);
         /// <summary>
         /// Pre determine the Id of a chain request without anchoring it in the blockchain
         /// </summary>
@@ -240,9 +240,9 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>CommittedChainResponse</returns>
-        public CommittedChainResponse CreateChainUsingPOST (Chain chain)
+        public CommittedChainResponse CreateChain (Chain chain)
         {
-             ApiResponse<CommittedChainResponse> localVarResponse = CreateChainUsingPOSTWithHttpInfo(chain);
+             ApiResponse<CommittedChainResponse> localVarResponse = CreateChainWithHttpInfo(chain);
              return localVarResponse.Data;
         }
 
@@ -252,11 +252,11 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>ApiResponse of CommittedChainResponse</returns>
-        public ApiResponse< CommittedChainResponse > CreateChainUsingPOSTWithHttpInfo (Chain chain)
+        public ApiResponse< CommittedChainResponse > CreateChainWithHttpInfo (Chain chain)
         {
             // verify the required parameter 'chain' is set
             if (chain == null)
-                throw new ApiException(400, "Missing required parameter 'chain' when calling ChainApi->CreateChainUsingPOST");
+                throw new ApiException(400, "Missing required parameter 'chain' when calling ChainApi->CreateChain");
 
             var localVarPath = "/blockchain/easy/0.1.0/chains";
             var localVarPathParams = new Dictionary<String, String>();
@@ -302,7 +302,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
 
             if (ExceptionFactory != null)
             {
-                Exception exception = ExceptionFactory("CreateChainUsingPOST", localVarResponse);
+                Exception exception = ExceptionFactory("CreateChain", localVarResponse);
                 if (exception != null) throw exception;
             }
 
@@ -318,9 +318,9 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>Task of CommittedChainResponse</returns>
-        public async System.Threading.Tasks.Task<CommittedChainResponse> CreateChainUsingPOSTAsync (Chain chain)
+        public async System.Threading.Tasks.Task<CommittedChainResponse> CreateChainAsync (Chain chain)
         {
-             ApiResponse<CommittedChainResponse> localVarResponse = await CreateChainUsingPOSTAsyncWithHttpInfo(chain);
+             ApiResponse<CommittedChainResponse> localVarResponse = await CreateChainAsyncWithHttpInfo(chain);
              return localVarResponse.Data;
 
         }
@@ -331,11 +331,11 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
         /// <exception cref="Sphereon.SDK.Blockchain.Easy.Client.ApiException">Thrown when fails to make API call</exception>
         /// <param name="chain">Create a chain using the first entry supplied. The entry needs at least a (combination of) globaly unique external Id in the complete Blockchain network!</param>
         /// <returns>Task of ApiResponse (CommittedChainResponse)</returns>
-        public async System.Threading.Tasks.Task<ApiResponse<CommittedChainResponse>> CreateChainUsingPOSTAsyncWithHttpInfo (Chain chain)
+        public async System.Threading.Tasks.Task<ApiResponse<CommittedChainResponse>> CreateChainAsyncWithHttpInfo (Chain chain)
         {
             // verify the required parameter 'chain' is set
             if (chain == null)
-                throw new ApiException(400, "Missing required parameter 'chain' when calling ChainApi->CreateChainUsingPOST");
+                throw new ApiException(400, "Missing required parameter 'chain' when calling ChainApi->CreateChain");
 
             var localVarPath = "/blockchain/easy/0.1.0/chains";
             var localVarPathParams = new Dictionary<String, String>();
@@ -381,7 +381,7 @@ namespace Sphereon.SDK.Blockchain.Easy.Api
 
             if (ExceptionFactory != null)
             {
-                Exception exception = ExceptionFactory("CreateChainUsingPOST", localVarResponse);
+                Exception exception = ExceptionFactory("CreateChain", localVarResponse);
                 if (exception != null) throw exception;
             }
 
